--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -215,7 +215,7 @@
 }
 
 .timeline > li > .timeline-panel {
-  width: 46%;
+  width: 44%;
   float: left;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
@@ -371,4 +371,36 @@
   width: 45%;
   height: auto;
   padding:5px;
+}
+
+.home-badge {
+  color: #fff;
+  width: 200px;
+  height: 200px;
+  font-size: 1.4em;
+  text-align: center;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 10%;
+  border-top-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  border-bottom-left-radius: 10%;
+}
+
+.home-row-grey {
+  margin:50px 0 0 0;
+  background:#f8f5f0;
+  padding:40px;
+  text-align: center;
+}
+
+.home-row {
+  margin:50px 0 0 0;
+  padding:40px;
+  text-align: center;
+}
+
+.home-row-basic {
+  margin:50px 0 0 0;
+  padding:40px;
 }
