--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -7,6 +7,7 @@
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    %link{:href => "/assets/font-awesome/css/font-awesome.min.css", :rel => "stylesheet"}
     %link{:href => "/apple-touch-icon.png", :rel => "apple-touch-icon", :sizes => "180x180"}/
     %link{:href => "/favicon-32x32.png", :rel => "icon", :sizes => "32x32", :type => "image/png"}/
     %link{:href => "/favicon-16x16.png", :rel => "icon", :sizes => "16x16", :type => "image/png"}/
