home page images

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -26,10 +26,10 @@
   .col-md-6{align: 'center'}
     .lead=t("home_blurb_2")
   .col-md-6{align: 'center'}
-    =image_tag('/assets/timeline.png', class: "img-rounded", size: "200x200")
+    =image_tag("/assets/timeline.png", class: "img-rounded", size: "200x200")
 .row.home-row-grey
   .col-md-6{align: 'center'}
-    =image_tag('/assets/profile.png', class: "img-rounded", size: "200x200")
+    =image_tag("/assets/profile.png", class: "img-rounded", size: "200x200")
   .col-md-6{align: 'center'}
     .lead=t("home_blurb_3")
 .row.home-row-basic
