--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -404,3 +404,7 @@
   margin:50px 0 0 0;
   padding:40px;
 }
+
+.home-pic {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
