--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,17 +1,18 @@
 #user-results
-.row{align: 'center', style: 'margin:0px;'}
-  %h1
-    = image_tag("/assets/leaf_vectorized.png", size: "120x120", style: "margin-top:-10px;")
-    = t("family")
-  %p
+.row.home-row
+  .col-md-6{align: 'center'}
+    %h1
+      = image_tag("/assets/leaf_vectorized.png", size: "200x200", style: "margin-top:-10px;")
+      = t("family")
+  .col-md-6{align: 'center', style: "padding-top:40px;"}
     .lead= t('tag_line')
-  %p
-    .btn-group.btn-group-justified{style: 'width:200px;'}
-      =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
-      =link_to t('sign_up'), signup_path, class: "btn btn-success"
+    %p
+      .btn-group.btn-group-justified{style: 'width:200px;'}
+        =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
+        =link_to t('sign_up'), signup_path, class: "btn btn-success"
 .row.home-row-grey
   .col-md-6{align: 'center'}
-    %table.home-badge
+    %table.home-badge.home-pic
       %tr
         %td{colspan: '2', align: 'center'}=content_tag(:i, nil, class: "fa fa-instagram fa-4x")
       %tr
@@ -26,10 +27,10 @@
   .col-md-6{align: 'center'}
     .lead=t("home_blurb_3")
   .col-md-6{align: 'center'}
-    =image_tag("/assets/profile.png", class: "img-rounded", size: "200x200")
+    =image_tag("/assets/profile.png", class: "img-rounded home-pic", size: "200x200")
 .row.home-row-grey
   .col-md-6{align: 'center'}
-    =image_tag("/assets/timeline.png", class: "img-rounded", size: "200x200")
+    =image_tag("/assets/timeline.png", class: "img-rounded home-pic", size: "200x200")
   .col-md-6{align: 'center'}
     .lead=t("home_blurb_2")
 .row.home-row-basic
