--- a/app/views/users/signup.html.haml
+++ b/app/views/users/signup.html.haml
@@ -2,13 +2,19 @@
   .panel-heading
     %h4= t('create_account')
   .panel-body
-    %form.form-horizontal{"accept-charset" => "UTF-8", :action => (@user.id ? user_path(@user) : '/users'), "data-remote" => "true", :method => (@user.id ? "patch" : "post"), :role => "form"}
+    %form.form-horizontal{"accept-charset" => "UTF-8", :action => '/register', "data-remote" => "true", :method => "post", :role => "form"}
       %div{:style => "display:none"}
         %input{:name => "utf8", :type => "hidden", :value => "✓"}/
       .form-group{style: "margin-bottom:0px;"}
         %label.col-md-3.control-label
         .col-md-9
-          .errors
+          -if @user.errors.any? || @family.errors.any?
+            .errors.alert.alert-danger
+              %ul
+                - @user.errors.full_messages.each do |error|
+                  %li= error
+                - @family.errors.full_messages.each do |error|
+                  %li= error
       .form-group
         %label.col-md-3.control-label{:for => "name"}= t('name')
         .col-md-9
