--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -408,3 +408,8 @@
 .home-pic {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.back-arrow {
+  color: #428bca !important;
+  margin-right: 10px;
+}
