--- a/app/views/social_medium/_instagram_rel.html.haml
+++ b/app/views/social_medium/_instagram_rel.html.haml
@@ -11,7 +11,7 @@
           - @results.each do |result|
             -if params[:relationship_type] == "liked"
               %tr
-                %td{style: "width:50px;"}= link_to image_tag(result.images['thumbnail']['url'], size: "40x40", class: "img-rounded media-object"), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: result.id), remote: true
+                %td{style: "width:50px;"}= link_to image_tag(result.images['thumbnail']['url'], size: "40x40", class: "img-rounded media-object"), instagram_post_user_social_medium_index_path(@user, feed_id: @feed.id, media_id: result.id, path: 'liked'), remote: true
                 %td
                   %h4.media-heading=link_to result.caption['from']['username'], "http://instagram.com/#{result.caption['from']['username']}", target: :blank
                   = result.caption['from']['full_name']
@@ -22,8 +22,8 @@
                   -if current_user.parent?
                     .pull-right
                       -if params[:relationship_type] == "followers"
-                        = link_to content_tag(:i, nil, class: "fa fa-remove"), block_user_user_social_medium_index_path(id: @feed.id, user_id: @user.id, rel_id: result.id), remote: true
+                        = link_to content_tag(:i, nil, class: "fa fa-remove"), block_user_user_social_medium_index_path(id: @feed.id, user_id: @user.id, rel_id: result.id), remote: true, data: {confirm: t('are_you_sure')}
                       -else
-                        = link_to content_tag(:i, nil, class: "fa fa-remove"), unfollow_user_social_medium_index_path(id: @feed.id, user_id: @user.id, rel_id: result.id), remote: true
+                        = link_to content_tag(:i, nil, class: "fa fa-remove"), unfollow_user_social_medium_index_path(id: @feed.id, user_id: @user.id, rel_id: result.id), remote: true, data: {confirm: t('are_you_sure')}
                   %h4.media-heading=link_to result['username'], "http://instagram.com/#{result['username']}", target: :blank
                   = result['full_name']
