--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,2 +1,1 @@
-$("#inner-modal").html("<%= escape_javascript(render 'new') %>");
-$("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'new') %>");
