--- a/app/views/users/edit.js.erb
+++ b/app/views/users/edit.js.erb
@@ -1,1 +1,2 @@
 $("#user-results").html("<%= escape_javascript(render 'edit') %>");
+$("#bread-crumb").text("/ <%= escape_javascript(t('edit')) %>");
