--- a/app/views/users/social_medium.js.erb
+++ b/app/views/users/social_medium.js.erb
@@ -1,1 +1,2 @@
 $("#user-results").html("<%= escape_javascript(render 'social_medium') %>");
+$("#bread-crumb").text("/ <%= escape_javascript(t('social_media')) %>");
