--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -2,6 +2,8 @@
 
 .results-nav
   #user-results
-    = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('family_tasks') }
-    -@members.each do |member|
-      = render partial: 'users/tasks', locals: { family: @family, user: member, tasks: member.todays_tasks, section: t('member_tasks', member: member.name) }
+    .panel.panel-default
+      .panel-heading
+        %h4= t("tasks")
+      .panel-body
+        = render partial: 'list'
