--- a/app/views/social_medium/_activity.html.haml
+++ b/app/views/social_medium/_activity.html.haml
@@ -2,10 +2,9 @@
   -right = false
   -date = nil
   -@activities.each do |activity|
-    -next unless activity.posted_at
     -unless date == activity.date
       %li.timeline-date
-        -date = activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset
+        -date = activity.full_date
         .label.label-success="#{t('days')[date.wday]} #{l(date, format: :day_month)}"
     %li{class: "#{'timeline-inverted' if right}"}
       .timeline-badge
@@ -15,14 +14,14 @@
           .visible-xs
             %small.text-muted.pull-right{style: "padding-top:10px;"}
               %i.glyphicon.glyphicon-time
-              =l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :short_time)
+              =l(activity.full_date, format: :short_time)
             %h4.timeline-title
               %a.location.title-like{href: member_path(activity.user), style: 'text-decoration:none;'}
                 =image_tag(gravatar_for(activity.user), class: "img-rounded", size: "35x35")
           .hidden-xs
             %small.text-muted.pull-right{style: "padding-top:10px;"}
               %i.glyphicon.glyphicon-time
-              =l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :short_time)
+              =l(activity.full_date, format: :short_time)
             %h4.timeline-title
               %a.location.title-like.hidden-xs{href: member_path(activity.user), style: 'text-decoration:none;'}
                 =image_tag(gravatar_for(activity.user), class: "img-rounded", size: "35x35")
