--- a/app/views/completions/complete_task.js.erb
+++ b/app/views/completions/complete_task.js.erb
@@ -1,1 +1,1 @@
-$("#task-<%= @task.id %>").html('<btn class="fa fa-check-square-o fa-2x"></btn>');
+$("#task-<%= @task.id %>").html('<btn class="fa fa-check-square-o fa-2x text-success"></btn>');
