--- a/app/views/tasks/_new.html.haml
+++ b/app/views/tasks/_new.html.haml
@@ -1,3 +1,5 @@
-.modal-header
-  %h3= t('new_task')
-= render "form"
+.panel.panel-default
+  .panel-heading
+    %h4= t('new_task')
+  .panel-body
+    = render "form"
