--- a/app/views/tasks/edit.js.erb
+++ b/app/views/tasks/edit.js.erb
@@ -1,2 +1,2 @@
-$("#inner-modal").html("<%= escape_javascript(render 'edit') %>");
-$("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'edit') %>");
+$("#bread-crumb").text("/ <%= escape_javascript(t('edit')) %>");
