--- a/app/views/tasks/_sidenav.html.haml
+++ b/app/views/tasks/_sidenav.html.haml
@@ -4,7 +4,7 @@
       %h4
         .pull-right
           -if current_user.parent?
-            =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), new_task_path, remote: true
+            =link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_task_path, remote: true
         = link_to t('tasks'), "/tasks", class: 'location'
     .panel-body.visible-xs
       %table.table.table-hover
